--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -18,6 +18,10 @@ jobs:
 
       ##########
       ### BUILD: General SquareOne build steps
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+        with:
+          tools: composer:v1
 
       # Get Build Repository
       - name: Check out build branch
