--- a/wp-content/themes/core/package.json
+++ b/wp-content/themes/core/package.json
@@ -92,6 +92,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
+    "mt-a11y-dialog": "^5.1.1",
     "object-hash": "^2.0.0",
     "object-to-formdata": "^2.1.2",
     "prop-types": "^15.7.2",
