Use correct PHPCS standards.

--- a/package.json
+++ b/package.json
@@ -200,7 +200,7 @@
   "lint-staged": {
     "*.php": [
       "php -l",
-      "./vendor/bin/phpcs --extensions=php --warning-severity=8 -s"
+      "./vendor/bin/phpcs --standard=./phpcs.xml --extensions=php --warning-severity=8 -s"
     ]
   }
 }
