--- a/package.json
+++ b/package.json
@@ -36,11 +36,16 @@
     "*.php": [
       "php -l",
       "./vendor/bin/phpcs --standard=./phpcs.xml --extensions=php --warning-severity=8 -s"
+    ],
+    "*.js": [
+      "eslint"
     ]
   },
   "dependencies": {},
   "devDependencies": {
-    "husky": "^1.1.2",
-    "lint-staged": "^7.2.2"
+    "eslint": "^7.15.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^7.3.0",
+    "prettier": "^2.2.1"
   }
 }
