--- a/composer.json
+++ b/composer.json
@@ -123,6 +123,7 @@
     "php-http/httplug": "^1.1",
     "phpcompatibility/php-compatibility": "*",
     "phpcompatibility/phpcompatibility-wp": "^2.0",
+    "phpunit/phpunit": "^8.0 || ^9.0 <9.5",
     "sirbrillig/phpcs-variable-analysis": "^2.0.1",
     "squizlabs/php_codesniffer": "^3.4.2",
     "wp-cli/wp-cli": "^2.2.0"
