Quote secrets.GH_TOKEN

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           mkdir -p dev/docker/composer
           printf '{ "config": {}, "repositories": { "packagist": { "type": "composer", "url": "https://packagist.org" } } }' > dev/docker/composer/config.json
-          printf '{ "github-oauth": { "github.com": "%s" } }\n' ${{ secrets.GH_TOKEN }} > dev/docker/composer/auth.json
+          printf '{ "github-oauth": { "github.com": "%s" } }\n' "${{ secrets.GH_TOKEN }}" > dev/docker/composer/auth.json
 
       - name: Check for Cached Composer Dependencies
         id: cache-composer-dependencies
