--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,3 +124,9 @@ jobs:
       - name: Run webdriver tests
         run: docker-compose --project-name=${{ env.PROJECT_ID }} exec -T php-tests php /application/www/vendor/bin/codecept -vvv --config "/application/www/dev/tests" run webdriver
         working-directory: dev/docker
+
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: webdriver-artifacts
+          path: dev/tests/tests/_output/
