--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,6 +126,7 @@ jobs:
         working-directory: dev/docker
 
       - uses: actions/upload-artifact@v2
+        if: failure()
         with:
           name: webdriver-artifacts
           path: dev/tests/tests/_output/
