Rename artifacts since we're taking the entire output directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,5 +128,5 @@ jobs:
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
         with:
-          name: webdriver-artifacts
+          name: test-artifacts
           path: dev/tests/tests/_output/
