--- a/composer.json
+++ b/composer.json
@@ -86,6 +86,7 @@
     "mailgun/mailgun-php": "^2.8",
     "moderntribe/acf-image-select": "dev-master",
     "moderntribe/tribe-libs": "3.4.0",
+    "moderntribe/tribe-acf-post-list-field": "dev-main",
     "monolog/monolog": "1.23.0",
     "nickford/acf-swatch": "1.0.7",
     "nikic/fast-route": "^1.3",
