--- a/package.json
+++ b/package.json
@@ -24,5 +24,28 @@
     "docker:global:stop": "so global:stop",
     "docker:global:log": "so global:logs",
     "docker:global:cert": "so global:cert"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": [
+        "lint-staged"
+      ]
+    }
+  },
+  "lint-staged": {
+    "*.php": [
+      "php -l",
+      "./vendor/bin/phpcs --standard=./phpcs.xml --extensions=php --warning-severity=8 -s"
+    ],
+    "*.js": [
+      "eslint"
+    ]
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^7.3.0",
+    "prettier": "^2.2.1"
   }
 }
