--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
       "php -l",
       "./vendor/bin/phpcs --standard=./phpcs.xml --extensions=php --warning-severity=8 -s"
     ],
-    "*.js": [
-      "eslint"
+    "*.{js,tsx}": [
+      "./node_modules/.bin/eslint --fix"
+    ],
+    "*.{css,less,sass,pcss}": [
+      "./node_modules/.bin/stylelint --fix"
     ]
   },
   "dependencies": {},
@@ -46,6 +49,7 @@
     "eslint": "^7.15.0",
     "husky": "^1.3.1",
     "lint-staged": "^7.3.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "stylelint": "^13.11.0"
   }
 }
