Add xdebug v3 config for updated docker builds

--- a/dev/docker/php/php-ini-overrides.ini
+++ b/dev/docker/php/php-ini-overrides.ini
@@ -4,28 +4,34 @@ log_errors=1
 display_errors=1
 display_startup_errors=1
 error_log=/proc/1/fd/2
-xdebug.cli_color=1
-; force cli to always show errors
-;xdebug.force_display_errors=1
 
 upload_max_filesize=100M
 post_max_size=108M
 
+; xdebug
 xdebug.idekey="PHPSTORM"
+xdebug.mode=debug,profile,trace
+xdebug.start_with_request=trigger
+xdebug.client_host=host.tribe
 
-xdebug.profiler_enable=0
+; xdebug profiling
 xdebug.profiler_append=1
-xdebug.profiler_output_dir=/application/www/wp-content/uploads
-xdebug.profiler_enable_trigger=1
 xdebug.profiler_output_name=cachegrind.out.%H.%R.%t
-
-xdebug.remote_enable=1
-xdebug.remote_host=host.tribe
-xdebug.remote_port=9000
-;xdebug.remote_log=/application/www/wp-content/xdebug.log
+xdebug.output_dir=/application/www/wp-content/uploads
 
 xdebug.var_display_max_children=2048
 xdebug.var_display_max_data=2048
 xdebug.var_display_max_depth=64
+
+xdebug.cli_color=1
+
+; Force cli to always show errors
+;xdebug.force_display_errors=1
+
+; Default debug port is now 9003
+;xdebug.client_port=9000
+
+; Enable logging
+;xdebug.log=/application/www/wp-content/xdebug.log
 
 sendmail_path = /usr/bin/msmtp -t
