--- a/dev/docker/php/php-ini-overrides.ini
+++ b/dev/docker/php/php-ini-overrides.ini
@@ -31,7 +31,7 @@ xdebug.cli_color=1
 ; Default debug port is now 9003
 ;xdebug.client_port=9000
 
-; Enable logging
+; Enable xdebug logging
 ;xdebug.log=/application/www/wp-content/xdebug.log
 
 sendmail_path = /usr/bin/msmtp -t
