--- a/composer.json
+++ b/composer.json
@@ -123,6 +123,7 @@
     "codeception/util-universalframework": "^1.0",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
     "filp/whoops": "^2.2@dev",
+    "humanmade/psalm-plugin-wordpress": "^2.0",
     "lucatume/function-mocker": "~1.0",
     "lucatume/wp-browser": "^2.4",
     "mockery/mockery": "^1.3",
@@ -132,6 +133,7 @@
     "phpunit/phpunit": "^8.0 || ^9.0 <9.5",
     "sirbrillig/phpcs-variable-analysis": "^2.0.1",
     "squizlabs/php_codesniffer": "^3.4.2",
+    "vimeo/psalm": "^4.7",
     "wp-cli/wp-cli": "^2.2.0"
   },
   "extra": {
