Psalm error cleanup
* Set up config to ignore current errors until fixed
* Configure Psalm to review main project directories
* Fix type errors in Admin
* Let Psalm fix issues automatically

--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -3,9 +3,11 @@
     throwExceptionOnError="0"
     hideExternalErrors="true"
     autoloader="vendor/autoload.php"
+    errorBaseline="psalm-baseline.xml"
 >
     <projectFiles>
-        <directory name="wp-content/plugins/core/src"/>
+        <directory name="wp-content/plugins/core" />
+        <directory name="wp-content/themes/core" />
     </projectFiles>
     <plugins>
         <pluginClass xmlns="https://getpsalm.org/schema/config" class="PsalmWordPress\Plugin"/>
