--- a/wp-content/themes/core/package.json
+++ b/wp-content/themes/core/package.json
@@ -49,12 +49,12 @@
     "not op_mob <= 12.1"
   ],
   "engines": {
-    "node": "12.13.1",
-    "npm": "6.12.1"
+    "node": "14.15.0",
+    "npm": "6.14.8"
   },
   "scripts": {
     "gulp": "gulp",
-    "start": "npm run docker:start && yarn install && npm run gulp -- dist && npm run gulp -- dev",
+    "run": "npm run docker:start && yarn install && npm run gulp -- dist && npm run gulp -- dev",
     "dev": "npm run gulp -- dev",
     "dist": "npm run gulp -- dist",
     "server_dist": "npm run gulp -- server_dist",
@@ -209,12 +209,13 @@
     "stylelint-order": "^3.1.1",
     "terser-webpack-plugin": "^2.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.0.0-beta.13",
+    "webpack": "^5.3.2",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^4.0.0-beta.8",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
     "webpack-merge-and-include-globally": "^2.1.20",
-    "webpack-stream": "^5.2.1"
+    "webpack-stream": "^6.1.2",
+    "webpack-watch-files-plugin": "^1.1.0"
   }
 }
