--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Setup node version
         uses: actions/setup-node@v1
         with:
-          node-version: '12.13.1'
+          node-version: '14.15.1'
 
       # Cache node_modules TODO
 
@@ -54,9 +54,9 @@ jobs:
       - name: Yarn install and build
         working-directory: ${{ env.BUILD_FOLDER }}
         run: |
-          yarn install:theme
-          yarn validate
-          yarn server_dist
+          yarn install
+          npm run validate
+          npm run server_dist
 
       # Create local config for environment based settings
       - name: Create local config
