--- a/composer.json
+++ b/composer.json
@@ -85,12 +85,13 @@
     "johnpbloch/wordpress-core-installer": "1.0.0",
     "mailgun/mailgun-php": "^2.8",
     "moderntribe/acf-image-select": "dev-master",
-    "moderntribe/tribe-libs": "3.4.2",
     "moderntribe/tribe-acf-post-list-field": "^2.0",
+    "moderntribe/tribe-libs": "3.4.2",
     "monolog/monolog": "1.23.0",
     "nickford/acf-swatch": "1.0.7",
     "nikic/fast-route": "^1.3",
     "nikic/php-parser": "^4.5",
+    "ozdemirburak/iris": "^2.3",
     "php-di/php-di": "^6.0",
     "php-http/client-common": "^1.9.0",
     "php-http/curl-client": "^1.7",
