add heroku nodejs buildpack build script

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "npm": "6.14.8"
   },
   "scripts": {
+    "build": "gulp dist",
     "gulp": "gulp",
     "run": "npm run docker:start && yarn install && npm run gulp -- dist && npm run gulp -- dev",
     "dev": "npm run gulp -- dev",
