update app same. Add serve env

--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -10,7 +10,8 @@ on:
       - feature/review-apps
 
 env:
-  APPNAME: so
+  APPNAME: sq1
+  SERVER: ssh://dokku@moderntribe.qa:22
 
 jobs:
 
@@ -27,7 +28,7 @@ jobs:
       - name: Push to dokku
         uses: dokku/github-action@master
         with:
-          git_remote_url: "ssh://dokku@moderntribe.qa:22/${{ env.APPNAME }}"
+          git_remote_url: "${{ env.SERVER }}/${{ env.APPNAME }}"
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
   deploy_test_app:
@@ -44,7 +45,7 @@ jobs:
         uses: dokku/github-action@master
         with:
           command: review-apps:create
-          git_remote_url: "ssh://dokku@moderntribe.qa:22/${{ env.APPNAME }}"
+          git_remote_url: "${{ env.SERVER }}/${{ env.APPNAME }}"
           review_app_name: ${{ env.APPNAME }}-pr${{ github.event.pull_request.number }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           git_push_flags: --force
@@ -67,6 +68,6 @@ jobs:
         uses: dokku/github-action@master
         with:
           command: review-apps:destroy
-          git_remote_url: "ssh://dokku@moderntribe.qa:22/${{ env.APPNAME }}"
+          git_remote_url: "${{ env.SERVER }}/${{ env.APPNAME }}"
           review_app_name: ${{ env.APPNAME }}-pr${{ github.event.pull_request.number }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
