--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
     }
   ],
   "require": {
+    "composer-plugin-api": "^1.1",
     "php": "^7.4",
     "advanced-custom-fields/advanced-custom-fields-pro": "*",
     "composer/installers": "1.4.0",
