--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 
 updates:
-  - package-ecosystem: "composer1"
+  - package-ecosystem: "composer"
     directory: "/"
     schedule:
       interval: "weekly"
