--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,9 @@ dev/docker/global/.env
 #######################
 !dev/tests/tests/_data/*.sql
 dev/tests/tests/_support/_generated/
+
+# Code Quality #
+###############
+phpcs.xml
+.phpcs-cache
+
