--- a/composer.json
+++ b/composer.json
@@ -28,18 +28,19 @@
     },
     {
       "type": "vcs",
-      "no-api": true,
       "url": "git@github.com:nickforddesign/acf-swatch.git"
     },
     {
       "type": "vcs",
-      "no-api": true,
       "url": "git@github.com:moderntribe/ACF-Image-Select.git"
     },
     {
       "type": "vcs",
-      "no-api": true,
       "url": "git@github.com:moderntribe/tribe-acf-post-list-field.git"
+    },
+    {
+      "type": "vcs",
+      "url": "git@github.com:moderntribe/coding-standards.git"
     },
     {
       "type": "package",
@@ -110,8 +111,6 @@
     "wpackagist-plugin/wp-tota11y": "^1.2.0"
   },
   "require-dev": {
-    "automattic/phpcs-neutron-standard": "^1.5",
-    "automattic/vipwpcs": "^2.0.0",
     "codeception/codeception": "^4.0",
     "codeception/module-asserts": "^1.0",
     "codeception/module-cli": "^1.0",
@@ -120,17 +119,13 @@
     "codeception/module-phpbrowser": "^1.0",
     "codeception/module-webdriver": "^1.0",
     "codeception/util-universalframework": "^1.0",
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
     "filp/whoops": "^2.2@dev",
     "lucatume/function-mocker": "~1.0",
     "lucatume/wp-browser": "^2.4",
     "mockery/mockery": "^1.3",
+    "moderntribe/coding-standards": "^1.0",
     "php-http/httplug": "^1.1",
-    "phpcompatibility/php-compatibility": "*",
-    "phpcompatibility/phpcompatibility-wp": "^2.0",
     "phpunit/phpunit": "^8.0 || ^9.0 <9.5",
-    "sirbrillig/phpcs-variable-analysis": "^2.0.1",
-    "squizlabs/php_codesniffer": "^3.4.2",
     "wp-cli/wp-cli": "^2.5.0"
   },
   "extra": {
