better match editorconfig to phpcs rules

--- a/.editorconfig
+++ b/.editorconfig
@@ -100,7 +100,7 @@ ij_php_phpdoc_keep_blank_lines = true
 ij_php_phpdoc_param_spaces_between_name_and_description = 1
 ij_php_phpdoc_param_spaces_between_tag_and_type = 1
 ij_php_phpdoc_param_spaces_between_type_and_name = 1
-ij_php_phpdoc_use_fqcn = false
+ij_php_phpdoc_use_fqcn = true
 ij_php_phpdoc_wrap_long_lines = true
 ij_php_space_after_colon = true
 ij_php_space_after_colon_in_return_type = true
