--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -11,7 +11,6 @@ on:
 
 env:
   APPNAME: sq1
-  REVIEW_APPNAME: ${{ env.APPNAME }}-pr${{ github.event.pull_request.number }}
 
 jobs:
 
@@ -35,6 +34,8 @@ jobs:
     runs-on: ubuntu-latest
     # only run when a pull request is opened on main
     if: github.event_name == 'pull_request' && github.event.action == 'opened' || github.event.action == 'reopened' && github.repository == ‘moderntribe/squareone’
+    env:
+      REVIEW_APPNAME: ${{ env.APPNAME }}-pr${{ github.event.pull_request.number }}
     steps:
       - name: Cloning repo
         uses: actions/checkout@v2
@@ -104,6 +105,8 @@ jobs:
     runs-on: ubuntu-latest
     # only run when a pull request is opened on main
     if: github.event_name == 'pull_request' && github.event.action == 'synchronize' && github.repository == ‘moderntribe/squareone’
+    env:
+      REVIEW_APPNAME: ${{ env.APPNAME }}-pr${{ github.event.pull_request.number }}
     steps:
       - name: Cloning repo
         uses: actions/checkout@v2
@@ -123,6 +126,8 @@ jobs:
     runs-on: ubuntu-latest
     # only run when a pull request is closed
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.repository == ‘moderntribe/squareone’
+    env:
+      REVIEW_APPNAME: ${{ env.APPNAME }}-pr${{ github.event.pull_request.number }}
     steps:
       - name: Destroy the review app
         uses: dokku/github-action@master
