could not find a phpcs rule to align prop declarations in columns

--- a/.editorconfig
+++ b/.editorconfig
@@ -41,7 +41,7 @@ ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = false
 ij_php_align_assignments = true
 ij_php_align_class_constants = true
-ij_php_align_group_field_declarations = true
+ij_php_align_group_field_declarations = false
 ij_php_align_inline_comments = false
 ij_php_align_key_value_pairs = true
 ij_php_align_multiline_array_initializer_expression = true
