Use the phpcs dist file

--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -73,4 +73,4 @@ jobs:
           composer install --prefer-dist --no-progress --no-suggest --optimize-autoloader
 
       - name: PHPCS
-        run: ./vendor/bin/phpcs --standard=ModernTribe
+        run: ./vendor/bin/phpcs --standard=./phpcs.xml.dist
