--- a/package.json
+++ b/package.json
@@ -66,17 +66,6 @@
     "app:example": "cross-env NODE_ENV=example webpack-dev-server --hot --https --port 3000",
     "test": "cross-env NODE_ENV=test jest --config jest.config.json"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "wp-content/{*themes,mu-plugins,plugins*}/core/**/*.php": [
-      "php -l",
-      "./vendor/bin/phpcs --standard=./phpcs.xml --warning-severity=8 -s"
-    ]
-  },
   "dependencies": {
     "@types/react": "^16.9.11",
     "@vimeo/player": "^2.10.0",
@@ -120,6 +109,7 @@
     "workbox-window": "^5.0.0"
   },
   "devDependencies": {
+    "@arkweid/lefthook": "^0.7.5",
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
@@ -175,7 +165,6 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-stylelint": "^10.0.0",
     "gulp-uglify": "^3.0.1",
-    "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "ifdef-loader": "^2.1.4",
     "jest": "^24.9.0",
