--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -15,7 +15,7 @@ jobs:
       DEPLOY_FOLDER: ./deploy
       ENVIRONMENT: staging
       DEPLOY_REPO: ${{ secrets.STAGE_DEPLOY_REPO }}
-      COMPOSER_AUTH: '{ "github-oauth": { "github.com": "${{ secrets.GH_TOKEN }}" } }'
+      COMPOSER_AUTH: '{ "github-oauth": { "github.com": "${{ secrets.GITHUB_TOKEN }}" } }'
 
     steps:
 
