--- a/dev/herokuish/nginx_app.conf
+++ b/dev/herokuish/nginx_app.conf
@@ -1,39 +1,28 @@
 # Main Heroku Config
 # https://github.com/heroku/heroku-buildpack-php/blob/main/conf/nginx/heroku.conf.php
 
+index index.php;
+
 location = /favicon.ico {
-	log_not_found off;
-	access_log off;
+    log_not_found off;
+    access_log off;
 }
 
 location = /robots.txt {
-	allow all;
-	log_not_found off;
-	access_log off;
+    allow all;
+    log_not_found off;
+    access_log off;
 }
 
 # Deny access to any files with a .php extension in the uploads directory
 location ~* /(?:uploads|files)/.*\.php$ {
-	deny all;
+    deny all;
 }
 
-location @rewrites {
-    # Add trailing slash to */wp-admin requests.
-    rewrite /wp-admin$ $scheme://$host$uri/ permanent;
-    # rewrite all to index.php
-    rewrite ^(.*)$ /index.php/$1 last;
-}
+rewrite ^/wp-admin$ $scheme://$http_host/wp-admin/ permanent;
 
 location / {
-    # try to serve file directly, fallback to rewrite
-    try_files $uri @rewrites;
-    # try_files $uri $uri/ @rewrites;
-}
-
-# ensure that /index.php isn't accessible directly, but only through a rewrite
-location ~ ^/index\.php(/|$) {
-    try_files @heroku-fcgi @heroku-fcgi;
-    internal;
+    try_files $uri $uri/ /index.php?$args;
 }
 
 location /wp-content/ {
@@ -44,14 +33,12 @@ location /wp-content/ {
     add_header Cache-Control "public, must-revalidate, proxy-revalidate";
     expires max;
 
-    try_files $uri @rewrites;
+    try_files $uri $uri/ /index.php?$args;
 
     location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|eot|ttf|woff|mp4|m4v|mov|wmv|avi|mpg|ogv|3gp|3g2|flv|webm|aac|m4a|f4a|mp3|ogg|oga)$ {
         access_log off;
         log_not_found off;
         expires max;
-
         try_files $uri =404;
     }
 }
-
