--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -8,10 +8,18 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 1
+      - name: Get Node.js version
+        id: nvm
+        run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
+      - run: yarn install
       - uses: reviewdog/action-eslint@v1
         with:
-          github_token: ${{ secrets.GH_BOT_TOKEN }}
-          eslint_flags: 'wp-content/plugins/core/**.js wp-content/themes/core/**.js'
+          fail_on_error: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          eslint_flags: 'wp-content/{*themes,plugins*}/core/**/*.js'
